# dual

./: CHANGELOG.md  LICENSE  README.md  dual.cabal
.github/workflows/: ci.yaml
bench/: Main.hs
src/Numeric/: Dual.hs
test/: Main.hs
